--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,13 @@
 </head>
 
 <body dir="ltr" class="bg-neutral-900 min-h-screen grid place-items-center">
-  <div class="grid place-items-center gap-6 pb-[10rem] w-[80%] max-w-[30rem]">
+  <div class="grid place-items-center gap-6 pb-[10rem] w-[80%] max-w-[50rem]">
     <p id="message" class="text-white text-6xl"></p>
-    <div class="grid grid-cols-[max-content_auto] text-2xl bg-neutral-800 w-full p-2 rounded-md">
+    <div id="search-container"
+      class="grid grid-cols-[max-content_auto] text-2xl bg-neutral-800 w-full p-2 rounded-md border-2 border-transparent">
       <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
-      <input id="search" type="text" class="bg-transparent text-white placeholder-neutral-500" placeholder="search...">
+      <input id="search-input" type="text" class="outline-none bg-transparent text-white placeholder-neutral-500"
+        placeholder="search... (SPC)">
     </div>
   </div>
 </body>
