improve message and more

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     <div id="search-container"
       class="grid grid-cols-[max-content_auto] text-2xl bg-neutral-800 w-full p-2 rounded-md border-2 border-transparent">
       <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
-      <input id="search-input" type="text" class="outline-none bg-transparent text-white placeholder-neutral-500"
-        placeholder="search... (SPC)">
+      <input id="search-input" type="text" autocomplete="off"
+        class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="search... (SPC)">
     </div>
   </div>
 </body>
