--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,17 @@
 </head>
 
 <body dir="ltr" class="bg-neutral-900 min-h-screen grid place-items-center">
-  <div class="grid place-items-center gap-6 pb-[10rem] w-[80%] max-w-[50rem]">
-    <p id="message" class="text-white text-6xl"></p>
-    <div id="search-container"
-      class="grid grid-cols-[max-content_auto] text-2xl bg-neutral-800 w-full p-2 rounded-md border-2 border-transparent">
-      <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
-      <input id="search-input" type="text" autocomplete="off"
-        class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="search... (SPC)">
+  <div class="grid place-items-center gap-2 pb-[10rem] w-[95%] md:w-[80%] max-w-[50rem]">
+    <div class="grid w-full place-items-center gap-2 md:gap-4">
+      <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl"></p>
+      <div id="search-container"
+        class="grid grid-cols-[max-content_auto] text-base md:text-2xl bg-neutral-800 w-full p-1 md:p-2 rounded-md border-2 border-transparent">
+        <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
+        <input id="search-input" type="text" autocomplete="off"
+          class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="search... (SPC)">
+      </div>
     </div>
+    <div id="bookmarks-container" class="grid grid-cols-2 md:grid-cols-4 w-full gap-2"></div>
   </div>
 </body>
 
