--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>...</title>
   <link rel="stylesheet" href="styles/index.css" />
+  <link rel="stylesheet" href="styles/animations.css" />
   <link rel="icon" href="icon.svg" type="image/x-icon">
   <script src="scripts/index.ts" type="module" defer></script>
 </head>
