add icons and more

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>...</title>
   <link rel="stylesheet" href="styles/index.css" />
   <link rel="stylesheet" href="styles/animations.css" />
-  <link rel="icon" href="icon.svg" type="image/x-icon">
+  <link rel="icon" href="assets/icon.svg" type="image/x-icon">
   <script src="scripts/index.ts" type="module" defer></script>
 </head>
 
