--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>...</title>
+  <link rel="stylesheet" href="styles/tailwind.css" />
   <link rel="stylesheet" href="styles/index.css" />
   <link rel="stylesheet" href="styles/animations.css" />
   <link rel="icon" href="assets/icon.svg" type="image/x-icon">
