--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="scripts/popup.ts" defer></script>
   <title>options</title>
 </head>
 
