--- a/src/popup.html
+++ b/src/popup.html
@@ -4,11 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/tailwind.css" />
+  <link rel="stylesheet" href="styles/popup.css" />
+  <script src="scripts/popup.ts" defer></script>
   <title>popup</title>
 </head>
 
-<body>
-  <h1>popup</h1>
+<body class="bg-neutral-900 w-max">
+  <div class="grid grid-flow-row gap-2 place-items-center p-6">
+    <img src="./assets/icon.svg" class="w-36 aspect-square animate-float" alt="logo">
+    <p class="text-4xl text-white font-semibold">mtab</p>
+    <button id="options-button"
+      class="w-40 bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+      <span class="text-white text-2xl m-0">options</span>
+    </button>
+  </div>
 </body>
 
 </html>
