--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/tailwind.css" />
   <link rel="stylesheet" href="styles/index.css" />
   <link rel="stylesheet" href="styles/animations.css" />
-  <link rel="icon" href="assets/icon.svg" type="image/x-icon">
+  <link rel="icon" href="../assets/icon.svg" type="image/x-icon">
   <script src="scripts/index.ts" type="module" defer></script>
 </head>
 
