--- a/src/options/options.html
+++ b/src/options/options.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="scripts/popup.ts" defer></script>
+  <script src="options.ts" defer></script>
   <title>options</title>
 </head>
 
