--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/tailwind.css" />
-  <link rel="stylesheet" href="styles/popup.css" />
-  <script src="scripts/popup.ts" defer></script>
+  <link rel="stylesheet" href="../newtab/styles/tailwind.css" />
+  <link rel="stylesheet" href="popup.css" />
+  <script src="popup.ts" defer></script>
   <title>popup</title>
 </head>
 
 <body class="bg-neutral-900 w-max">
   <div class="grid grid-flow-row gap-2 place-items-center p-6">
-    <img src="./assets/icon.svg" class="w-36 aspect-square animate-float" alt="logo">
+    <img src="../assets/icon.svg" class="w-36 aspect-square animate-float" alt="logo">
     <p class="text-4xl text-white font-semibold">mtab</p>
     <button id="options-button"
       class="w-40 bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
