improve popup and options page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -5,12 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../newtab/styles/tailwind.css">
+  <link rel="stylesheet" href="options.css">
   <script src="options.ts" defer></script>
+  <link rel="icon" href="../assets/icon.svg" type="image/x-icon">
   <title>options</title>
 </head>
 
-<body>
-  <h1>options</h1>
+<body class="bg-neutral-900 min-h-screen">
+  <div class="w-[95%] sm:w-[60%] md:w-[40%] mx-auto">
+    <div class="grid place-items-center gap-4 p-4">
+      <img src="../assets/icon.svg" class="w-40 aspect-square animate-float" alt="logo">
+      <h1 class="text-white w-max text-4xl font-semibold">
+        <span class="text-emerald-500">mtab</span><span class="text-neutral-500">/</span><span>options</span>
+      </h1>
+    </div>
+    <div>
+      <p class="text-center text-white">this is the options page (wip)</p>
+    </div>
+  </div>
 </body>
 
 </html>
