--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,7 +10,7 @@
   <title>popup</title>
 </head>
 
-<body class="bg-neutral-900 w-max">
+<body class="bg-neutral-900 w-max select-none">
   <div class="grid grid-flow-row gap-2 place-items-center p-6">
     <img src="../assets/icon.svg" class="w-36 aspect-square animate-float" alt="logo">
     <p class="text-4xl text-white font-semibold">mtab</p>
