--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body dir="ltr" class="bg-neutral-900 min-h-screen grid place-items-center">
-  <div class="grid place-items-center gap-2 pb-[10rem] w-[95%] md:w-[80%] max-w-[50rem]">
+  <div id="content" class="grid place-items-center gap-2 pb-[10rem] w-[95%] md:w-[80%] max-w-[50rem]">
     <div class="grid w-full place-items-center gap-2 md:gap-4">
       <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl"></p>
       <div id="search-container"
