--- a/src/options/options.html
+++ b/src/options/options.html
@@ -28,9 +28,9 @@
         <p class="text-white">user.name</p>
         <div id="username-container"
           class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-          <span class="text-pink-500 font-semibold select-none">→&nbsp;</span>
+          <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
           <input id="username-input" type="text" autocomplete="off"
-            class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="search... (SPC)">
+            class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input name...">
         </div>
       </div>
     </div>
