--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -15,7 +15,7 @@
 <body dir="ltr" class="bg-neutral-900 min-h-screen grid place-items-center">
   <div id="content" class="grid place-items-center gap-2 pb-[10rem] w-[95%] md:w-[80%] max-w-[50rem]">
     <div class="grid w-full place-items-center gap-2 md:gap-4">
-      <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl"></p>
+      <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <div id="search-container"
         class="grid grid-cols-[max-content_auto] text-base md:text-2xl bg-neutral-800 w-full p-1 md:p-2 rounded-md border-2 border-transparent">
         <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
