begin working on options page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../newtab/styles/tailwind.css">
   <link rel="stylesheet" href="options.css">
-  <script src="options.ts" defer></script>
+  <script src="scripts/ui.ts" type="module" defer></script>
+  <script src="scripts/inputs.ts" type="module" defer></script>
   <link rel="icon" href="../assets/icon.svg" type="image/x-icon">
   <title>options</title>
 </head>
