actually connect options to newtab page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -35,6 +35,28 @@
         </div>
       </div>
     </div>
+    <div class="p-4 grid grid-flow-row gap-2 place-items-center">
+      <div class="grid grid-flow-col place-items-center w-max gap-2">
+        <button id="save-button"
+          class="w-20 bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">save</span>
+        </button>
+        <button id="export-button"
+          class="w-20 bg-indigo-500 hover:bg-indigo-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">export</span>
+        </button>
+        <button id="import-button"
+          class="w-20 bg-indigo-500 hover:bg-indigo-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">import</span>
+        </button>
+      </div>
+      <div class="grid grid-flow-col place-items-center w-max gap-2">
+        <button id="reset-to-default-button"
+          class="w-max bg-rose-500 hover:bg-rose-600 duration-300 ease-in-out px-4 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">reset to default</span>
+        </button>
+      </div>
+    </div>
   </div>
 </body>
 
