--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -12,7 +12,8 @@
   <script src="scripts/index.ts" type="module" defer></script>
 </head>
 
-<body dir="ltr" class="bg-neutral-900 min-h-screen grid place-items-center">
+<body dir="ltr" class="bg-neutral-500 min-h-screen grid place-items-center">
+  <div id="wallpaper" class="w-screen h-screen fixed z-[-1]"></div>
   <div id="content" class="grid place-items-center gap-2 pb-[10rem] w-[95%] md:w-[80%] max-w-[50rem]">
     <div class="grid w-full place-items-center gap-2 md:gap-4">
       <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
