--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -18,7 +18,7 @@
     <div class="grid w-full place-items-center gap-2 md:gap-4">
       <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <div id="search-container"
-        class="grid grid-cols-[max-content_auto] text-base md:text-2xl bg-neutral-800 w-full p-1 md:p-2 rounded-md border-2 border-transparent">
+        class="grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
         <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
         <input id="search-input" type="text" autocomplete="off"
           class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="search... (SPC)">
