--- a/src/options/options.html
+++ b/src/options/options.html
@@ -55,6 +55,26 @@
         </div>
       </div>
       <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+        <p class="text-white text-base">wallpaper.enabled</p>
+        <div class="ml-auto">
+          <label class="relative inline-flex items-center cursor-pointer">
+            <input id="wallpaper-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
+            <div
+              class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+            </div>
+          </label>
+        </div>
+      </div>
+      <div class="grid gap-2">
+        <p class="text-white text-base">wallpaper.url</p>
+        <div id="wallpaper-url-container"
+          class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+          <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+          <input id="wallpaper-url-input" type="text" autocomplete="off"
+            class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input url...">
+        </div>
+      </div>
+      <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
         <p class="text-white text-base">animations.enabled</p>
         <div class="ml-auto">
           <label class="relative inline-flex items-center cursor-pointer">
