--- a/src/options.html
+++ b/src/options.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../newtab/styles/tailwind.css">
-  <link rel="stylesheet" href="options.css">
-  <script src="scripts/ui.ts" type="module" defer></script>
-  <script src="scripts/inputs.ts" type="module" defer></script>
-  <link rel="icon" href="../assets/icon.svg" type="image/x-icon">
+  <link rel="stylesheet" href="./newtab/styles/tailwind.css">
+  <link rel="stylesheet" href="options/options.css">
+  <script src="options/scripts/ui.ts" type="module" defer></script>
+  <script src="options/scripts/inputs.ts" type="module" defer></script>
+  <link rel="icon" href="./assets/icon.svg" type="image/x-icon">
   <title>options ヽ(・ω・*)</title>
 </head>
 
 <body dir="ltr" class="bg-neutral-900 min-h-screen">
   <div class="grid grid-flow-row w-[95%] sm:w-[60%] md:w-[40%] mx-auto">
     <div class="grid place-items-center gap-4 p-4">
-      <img src="../assets/icon.svg" class="w-40 aspect-square animate-float" alt="logo">
+      <img src="./assets/icon.svg" class="w-40 aspect-square animate-float" alt="logo">
       <h1 class="text-white w-max text-4xl font-semibold">
         <span class="text-emerald-500">mtab</span><span class="text-neutral-500">/</span><span>options</span>
       </h1>
