--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>...</title>
-  <link rel="stylesheet" href="styles/tailwind.css" />
-  <link rel="stylesheet" href="styles/index.css" />
-  <link rel="stylesheet" href="styles/animations.css" />
-  <link rel="icon" href="../assets/icon.svg" type="image/x-icon">
-  <script src="scripts/index.ts" type="module" defer></script>
+  <link rel="stylesheet" href="newtab/styles/tailwind.css" />
+  <link rel="stylesheet" href="newtab/styles/index.css" />
+  <link rel="stylesheet" href="newtab/styles/animations.css" />
+  <link rel="icon" href="./assets/icon.svg" type="image/x-icon">
+  <script src="newtab/scripts/index.ts" type="module" defer></script>
 </head>
 
 <body dir="ltr" class="bg-neutral-500 min-h-screen grid place-items-center">
