--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="newtab/styles/tailwind.css" />
   <link rel="stylesheet" href="newtab/styles/index.css" />
   <link rel="stylesheet" href="newtab/styles/animations.css" />
-  <link rel="icon" href="./assets/icon.svg" type="image/x-icon">
+  <link rel="icon" href="./assets/icon.png" type="image/x-icon">
   <script src="newtab/scripts/index.ts" type="module" defer></script>
 </head>
 
