--- a/src/popup.html
+++ b/src/popup.html
@@ -12,7 +12,7 @@
 
 <body dir="ltr" class="bg-neutral-900 w-max select-none">
   <div class="grid grid-flow-row gap-2 place-items-center p-6">
-    <img src="./assets/icon.svg" class="w-36 aspect-square animate-float" alt="logo">
+    <img src="./assets/icon.png" class="w-36 aspect-square animate-float" alt="logo">
     <p class="text-4xl text-white font-semibold">mtab</p>
     <button id="options-button"
       class="w-40 bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
