--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <div id="wallpaper" class="w-screen h-screen fixed z-[-1]"></div>
   <div id="content" class="grid place-items-center gap-2 pb-[10rem] w-[95%] md:w-[80%] max-w-[50rem]">
     <div class="grid w-full place-items-center gap-2 md:gap-4">
-      <p id="message" class="text-white text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
+      <p id="message" class="text-white text-center text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <div id="search-container"
         class="grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
         <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
