begin working on more options

--- a/src/options.html
+++ b/src/options.html
@@ -74,6 +74,17 @@
             class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input url...">
         </div>
       </div>
+      <div class="grid gap-2">
+        <p class="text-white">uiStyle</p>
+        <div>
+          <button id="ui-style-solid-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md">
+            <span class="text-white">solid</span>
+          </button>
+          <button id="ui-style-glass-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md">
+            <span class="text-white">glass</span>
+          </button>
+        </div>
+      </div>
       <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
         <p class="text-white text-base">animations.enabled</p>
         <div class="ml-auto">
