change ui style option

--- a/src/options.html
+++ b/src/options.html
@@ -77,10 +77,12 @@
       <div class="grid gap-2">
         <p class="text-white">uiStyle</p>
         <div>
-          <button id="ui-style-solid-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md">
+          <button id="ui-style-solid-button"
+            class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
             <span class="text-white">solid</span>
           </button>
-          <button id="ui-style-glass-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md">
+          <button id="ui-style-glass-button"
+            class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
             <span class="text-white">glass</span>
           </button>
         </div>
