--- a/src/options.html
+++ b/src/options.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="options/options.css">
   <script src="options/scripts/ui.ts" type="module" defer></script>
   <script src="options/scripts/inputs.ts" type="module" defer></script>
+  <script src="options/scripts/onload.ts" type="module" defer></script>
   <link rel="icon" href="./assets/icon.svg" type="image/x-icon">
   <title>options ヽ(・ω・*)</title>
 </head>
