--- a/src/options.html
+++ b/src/options.html
@@ -26,6 +26,7 @@
       <p class="text-center text-white">this is the options page (wip)</p>
     </div>
     <main class="grid grid-flow-row gap-20 pt-16">
+      <!-- user -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
@@ -42,6 +43,7 @@
           </div>
         </div>
       </section>
+      <!-- title -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
@@ -49,7 +51,7 @@
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
-          <p class="text-white text-base">new tab title</p>
+          <p class="text-white text-base">title</p>
           <div id="title-container"
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
@@ -69,6 +71,58 @@
           </div>
         </div>
       </section>
+      <!-- message -->
+      <section class="grid grid-flow-row gap-4">
+        <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <span class="text-neutral-500">message</span>
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+        </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">message.font</p>
+          <div id="message-font-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="message-font-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input name...">
+          </div>
+        </div>
+        <div class="grid gap-2 text-base">
+          <p class="text-white">message.type</p>
+          <div>
+            <button id="message-type-afternoon-morning-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">afternoon-morning</span>
+            </button>
+            <button id="message-type-date-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">date</span>
+            </button>
+            <button id="message-type-time-12-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">time-12</span>
+            </button>
+            <button id="message-type-time-24-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">time-24</span>
+            </button>
+            <button id="message-type-custom-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">custom</span>
+            </button>
+          </div>
+        </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">message.customText (needs message.type to be custom)</p>
+          <div id="message-custom-text-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="message-custom-text-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input name...">
+          </div>
+        </div>
+      </section>
+      <!-- wallpaper -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
@@ -96,13 +150,14 @@
           </div>
         </div>
       </section>
+      <!-- ui -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
           <span class="text-neutral-500">ui</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
-        <div class="grid gap-2">
+        <div class="grid gap-2 text-base">
           <p class="text-white">uiStyle</p>
           <div>
             <button id="ui-style-solid-button"
@@ -116,6 +171,7 @@
           </div>
         </div>
       </section>
+      <!-- animations -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
@@ -133,8 +189,46 @@
             </label>
           </div>
         </div>
+        <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+          <p class="text-white text-base">animations.uniformBookmarkAnimations</p>
+          <div class="ml-auto">
+            <label class="relative inline-flex items-center cursor-pointer">
+              <input id="animations-uniform-bookmark-animations-checkbox" type="checkbox" value=""
+                class="sr-only peer" />
+              <div
+                class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+              </div>
+            </label>
+          </div>
+        </div>
+        <div class="grid gap-2 text-base">
+          <p class="text-white">animations.type</p>
+          <div>
+            <button id="animations-type-down-bouncy-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">down-bouncy</span>
+            </button>
+            <button id="animations-type-down-smooth-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">down-smooth</span>
+            </button>
+            <button id="animations-type-down-fall-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">down-fall</span>
+            </button>
+            <button id="animations-type-up-bouncy-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">up-bouncy</span>
+            </button>
+            <button id="animations-type-up-smooth-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              <span class="text-white">up-smooth</span>
+            </button>
+          </div>
+        </div>
       </section>
     </main>
+    <!-- save buttons and more -->
     <div class="p-4 grid grid-flow-row gap-2 place-items-center mt-20 mb-12">
       <div class="grid grid-flow-col place-items-center w-max gap-2">
         <button id="save-button"
