add more wallpapers

--- a/src/options.html
+++ b/src/options.html
@@ -19,7 +19,7 @@
     <div class="grid place-items-center gap-4 p-4">
       <img src="./assets/icon.png" class="w-40 aspect-square animate-float" alt="logo">
       <h1 class="text-white w-max text-4xl font-semibold">
-        <span class="text-emerald-500">mtab</span><span class="text-neutral-500">/</span><span>options</span>
+        <span class="text-emerald-500">mtab</span><span class="text-neutral-500 text-base">/</span><span>options</span>
       </h1>
     </div>
     <div>
@@ -30,7 +30,7 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500">user</span>
+          <span class="text-neutral-500 text-base">user</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
@@ -47,7 +47,7 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500">title</span>
+          <span class="text-neutral-500 text-base">title</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
@@ -75,7 +75,7 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500">message</span>
+          <span class="text-neutral-500 text-base">message</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
@@ -126,7 +126,7 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500">wallpaper</span>
+          <span class="text-neutral-500 text-base">wallpaper</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
@@ -154,7 +154,7 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500">ui</span>
+          <span class="text-neutral-500 text-base">ui</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2 text-base">
@@ -175,7 +175,7 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500">animations</span>
+          <span class="text-neutral-500 text-base">animations</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
