--- a/src/options.html
+++ b/src/options.html
@@ -84,30 +84,30 @@
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
             <input id="message-font-input" type="text" autocomplete="off"
-              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input name...">
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input font...">
           </div>
         </div>
         <div class="grid gap-2 text-base">
           <p class="text-white">message.type</p>
-          <div>
+          <div class="grid grid-cols-2 gap-2">
             <button id="message-type-afternoon-morning-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">afternoon-morning</span>
             </button>
             <button id="message-type-date-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">date</span>
             </button>
             <button id="message-type-time-12-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">time-12</span>
             </button>
             <button id="message-type-time-24-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">time-24</span>
             </button>
             <button id="message-type-custom-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">custom</span>
             </button>
           </div>
@@ -118,7 +118,7 @@
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
             <input id="message-custom-text-input" type="text" autocomplete="off"
-              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input name...">
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input text...">
           </div>
         </div>
       </section>
@@ -159,13 +159,13 @@
         </div>
         <div class="grid gap-2 text-base">
           <p class="text-white">uiStyle</p>
-          <div>
+          <div class="grid grid-cols-2 gap-2">
             <button id="ui-style-solid-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">solid</span>
             </button>
             <button id="ui-style-glass-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">glass</span>
             </button>
           </div>
@@ -189,41 +189,115 @@
             </label>
           </div>
         </div>
-        <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
-          <p class="text-white text-base">animations.uniformBookmarkAnimations</p>
-          <div class="ml-auto">
-            <label class="relative inline-flex items-center cursor-pointer">
-              <input id="animations-uniform-bookmark-animations-checkbox" type="checkbox" value=""
-                class="sr-only peer" />
-              <div
-                class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
-              </div>
-            </label>
+        <div class="grid gap-2 text-base">
+          <p class="text-white">animations.bookmarkTiming</p>
+          <div class="grid grid-cols-2 gap-2">
+
+            <button id="animations-bookmarking-timing-left-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              <span class="text-white">left</span>
+            </button>
+            <button id="animations-bookmarking-timing-right-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              <span class="text-white">right</span>
+            </button>
+            <button id="animations-bookmarking-timing-uniform-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              <span class="text-white">uniform</span>
+            </button>
           </div>
         </div>
         <div class="grid gap-2 text-base">
           <p class="text-white">animations.type</p>
-          <div>
+          <div class="grid grid-cols-2 gap-2">
             <button id="animations-type-down-bouncy-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">down-bouncy</span>
             </button>
             <button id="animations-type-down-smooth-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">down-smooth</span>
             </button>
             <button id="animations-type-down-fall-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">down-fall</span>
             </button>
             <button id="animations-type-up-bouncy-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">up-bouncy</span>
             </button>
             <button id="animations-type-up-smooth-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 px-4 rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
               <span class="text-white">up-smooth</span>
             </button>
+          </div>
+        </div>
+      </section>
+      <!-- search -->
+      <section class="grid grid-flow-row gap-4">
+        <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <span class="text-neutral-500 text-base">search</span>
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+        </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">search.font</p>
+          <div id="search-font-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="search-font-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input font...">
+          </div>
+        </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">search.placeholderText</p>
+          <div id="search-placeholder-text-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="search-placeholder-text-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input placeholder...">
+          </div>
+        </div>
+        <div class="grid gap-2 text-base">
+          <p class="text-white">search.engine</p>
+          <div class="grid grid-cols-2 gap-2">
+            <button id="search-engine-duckduckgo-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              <div class="grid grid-cols-[24px_max-content] gap-2">
+                <img src="assets/search-engines/duckduckgo.svg" alt="duckduckgo">
+                <span class="text-white">duckduckgo</span>
+              </div>
+            </button>
+            <button id="search-engine-google-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              <div class="grid grid-cols-[24px_max-content] gap-2">
+                <img src="assets/search-engines/google.png" alt="google">
+                <span class="text-white">google</span>
+              </div>
+            </button>
+            <button id="search-engine-bing-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              <div class="grid grid-cols-[24px_max-content] gap-2">
+                <img src="assets/search-engines/bing.png" alt="bing">
+                <span class="text-white">bing</span>
+              </div>
+            </button>
+            <button id="search-engine-yahoo-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              <div class="grid grid-cols-[24px_max-content] gap-2">
+                <img src="assets/search-engines/yahoo.png" alt="yahoo">
+                <span class="text-white">yahoo</span>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">search.focusedBorderColor (use #00000000 for none)</p>
+          <div id="search-focused-border-color-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="search-focused-border-color-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color...">
           </div>
         </div>
       </section>
@@ -246,7 +320,7 @@
       </div>
       <div class="grid grid-flow-col place-items-center w-max gap-2">
         <button id="reset-to-default-button"
-          class="w-max bg-rose-500 hover:bg-rose-600 duration-300 ease-in-out px-4 py-1 rounded-md cursor-pointer">
+          class="w-max bg-rose-500 hover:bg-rose-600 duration-300 ease-in-out  py-1 rounded-md cursor-pointer">
           <span class="text-white text-base m-0">reset to default</span>
         </button>
       </div>
