add option for animations.type

--- a/src/options.html
+++ b/src/options.html
@@ -92,23 +92,23 @@
           <p class="text-white">message.type</p>
           <div class="grid grid-cols-2 gap-2">
             <button id="message-type-afternoon-morning-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">afternoon-morning</span>
             </button>
             <button id="message-type-date-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">date</span>
             </button>
             <button id="message-type-time-12-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">time-12</span>
             </button>
             <button id="message-type-time-24-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">time-24</span>
             </button>
             <button id="message-type-custom-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">custom</span>
             </button>
           </div>
@@ -161,12 +161,10 @@
         <div class="grid gap-2 text-base">
           <p class="text-white">uiStyle</p>
           <div class="grid grid-cols-2 gap-2">
-            <button id="ui-style-solid-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+            <button id="ui-style-solid-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">solid</span>
             </button>
-            <button id="ui-style-glass-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+            <button id="ui-style-glass-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">glass</span>
             </button>
           </div>
@@ -194,15 +192,15 @@
           <p class="text-white">animations.bookmarkTiming</p>
           <div class="grid grid-cols-2 gap-2">
             <button id="animations-bookmark-timing-left-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">left</span>
             </button>
             <button id="animations-bookmark-timing-right-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">right</span>
             </button>
             <button id="animations-bookmark-timing-uniform-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">uniform</span>
             </button>
           </div>
@@ -211,23 +209,23 @@
           <p class="text-white">animations.type</p>
           <div class="grid grid-cols-2 gap-2">
             <button id="animations-type-down-bouncy-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">down-bouncy</span>
             </button>
             <button id="animations-type-down-smooth-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">down-smooth</span>
             </button>
             <button id="animations-type-down-fall-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">down-fall</span>
             </button>
             <button id="animations-type-up-bouncy-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">up-bouncy</span>
             </button>
             <button id="animations-type-up-smooth-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2  rounded-md outline-none">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">up-smooth</span>
             </button>
           </div>
@@ -262,28 +260,28 @@
           <p class="text-white">search.engine</p>
           <div class="grid grid-cols-2 gap-2">
             <button id="search-engine-duckduckgo-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2rounded-md outline-none grid place-items-center">
               <div class="grid grid-cols-[24px_max-content] gap-2">
                 <img src="assets/search-engines/duckduckgo.svg" alt="duckduckgo">
                 <span class="text-white">duckduckgo</span>
               </div>
             </button>
             <button id="search-engine-google-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2rounded-md outline-none grid place-items-center">
               <div class="grid grid-cols-[24px_max-content] gap-2">
                 <img src="assets/search-engines/google.png" alt="google">
                 <span class="text-white">google</span>
               </div>
             </button>
             <button id="search-engine-bing-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2rounded-md outline-none grid place-items-center">
               <div class="grid grid-cols-[24px_max-content] gap-2">
                 <img src="assets/search-engines/bing.png" alt="bing">
                 <span class="text-white">bing</span>
               </div>
             </button>
             <button id="search-engine-yahoo-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center">
+              class="bg-neutral-800 hover:bg-neutral-700 py-2rounded-md outline-none grid place-items-center">
               <div class="grid grid-cols-[24px_max-content] gap-2">
                 <img src="assets/search-engines/yahoo.png" alt="yahoo">
                 <span class="text-white">yahoo</span>
